# OpenGL-hpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md
Lib/: glad.lib  glfw3dll.lib
include/: gl.hpp
include/Utils/: WindowUtils.h
src/OIT/: OIT.cpp
src/Test1/: Test1.cpp
src/Test_Point_Cloud/: Test_Point_Cloud.cpp
